<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.framework</groupId>
    <artifactId>framework-boot-starter</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>framework-boot-starter</name>
    <description>Java 框架脚手架 - 开箱即用的后端基础能力</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <modules>
        <module>framework-core</module>
        <module>framework-web</module>
        <module>framework-auth</module>
        <module>framework-security</module>
        <module>framework-cache</module>
        <module>framework-lock</module>
        <module>framework-idempotent</module>
        <module>framework-crypto</module>
        <module>framework-log</module>
        <module>framework-rate-limiter</module>
        <module>framework-mq</module>
        <module>framework-retry</module>
        <module>framework-tools</module>
        <module>framework-notify</module>
        <module>framework-local-message</module>
        <module>framework-excel</module>
        <module>framework-datasource</module>
        <module>framework-redis</module>
        <module>framework-feign</module>
        <module>framework-monitor</module>
        <module>framework-job</module>
        <module>framework-file</module>
        <module>framework-starter</module>
        <module>admin-service</module>
        <module>demo</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <mybatis-plus.version>3.5.6</mybatis-plus.version>
        <redisson.version>3.31.0</redisson.version>
        <jjwt.version>0.12.5</jjwt.version>
        <hutool.version>5.8.27</hutool.version>
        <springdoc.version>2.3.0</springdoc.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <lombok.version>1.18.46</lombok.version>
        <bcrypt.version>0.4</bcrypt.version>
        <spring-boot.version>3.2.5</spring-boot.version>
        <easyexcel.version>4.0.3</easyexcel.version>
        <feign.version>13.2.1</feign.version>
        <xxl-job.version>2.4.1</xxl-job.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 内部模块 -->
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-cache</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-lock</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-idempotent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-crypto</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-log</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-rate-limiter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-mq</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-retry</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-tools</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-notify</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-local-message</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-excel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-datasource</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-redis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-feign</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-monitor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-job</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-file</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>framework-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.framework</groupId>
                <artifactId>admin-service</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 第三方依赖 -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mindrot</groupId>
                <artifactId>jbcrypt</artifactId>
                <version>${bcrypt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.openfeign</groupId>
                <artifactId>feign-core</artifactId>
                <version>${feign.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xuxueli</groupId>
                <artifactId>xxl-job-core</artifactId>
                <version>${xxl-job.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                                <version>${spring-boot.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
